# market-os

./: .gitignore  CONTRIBUTING.md  DOCUMENTATION_INDEX.md  PORTFOLIO_OVERVIEW.md  QUICK_REFERENCE.txt  README.md
market-os/: .env.example  .gitignore  Makefile  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml
market-os/config/: config.yaml
market-os/docs/: ARCHITECTURE.md  BUILD_ORDER.md  DATA_CONTRACTS.md  PRINCIPLES.md  RESEARCH_LOG.md  RESEARCH_SUMMARY.md  TECHNICAL_SPECS.md
market-os/scripts/: demo.py  swing_duration_study.py
market-os/src/marketos/: __init__.py  config.py  principles.py
market-os/src/marketos/agents/: base.py
market-os/src/marketos/backtest/: attribution.py  engine.py  expectancy.py  trade_log.py  walkforward.py
market-os/src/marketos/dashboard/: app.py
market-os/src/marketos/data/: lake.py
market-os/src/marketos/db/: store.py
market-os/src/marketos/features/: cross_asset.py  fundamental.py  labeling.py  latent.py  latent_supervised.py  market_memory.py  ownership.py  registry.py  screening.py  seasonality.py  subspace.py  technical.py
market-os/src/marketos/models/: aggressive_sleeve_backtest.py  alpha_model.py  latent_alpha_backtest.py
market-os/src/marketos/notify/: briefing.py  telegram.py
market-os/tests/: test_action_plan.py  test_action_plan_page.py  test_aggressive_snapshot.py  test_angelone_fetcher.py  test_angelone_orders.py  test_cross_asset_factor_series.py  test_dashboard.py  test_india_snapshot.py  test_notify_briefing.py  test_notify_telegram.py  test_principles.py  test_screener_fetcher.py
(+48 files in other folders)
